# minecraft_clone

./: CMakeLists.txt
assets/shaders/: triangle.frag  triangle.vert
cmake/: Assets.cmake  Libraries.cmake
src/: Assets.h  Block.cpp  Block.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkMesh.cpp  ChunkMesh.h  ChunkMeshDataStruct.h  ChunkMeshRenderDistance.cpp  ChunkMeshRenderDistance.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  WindowManager.cpp  WindowManager.h  World.cpp  World.h  main.cpp
